--- a/src/app/component/admin/profile/profile.component.html
+++ b/src/app/component/admin/profile/profile.component.html
@@ -9,7 +9,7 @@
                 <app-loading-spinner></app-loading-spinner>
             </ng-container>
             <ng-container *ngIf="loadingspinner==false">
-                <div class="ml-[94%] pt-3">
+                <!-- <div class="ml-[94%] pt-3">
                     <div class="flex ">
                         <svg class="  w-6 h-6 text-gray-400 hover:text-blue-700 dark:text-white" aria-hidden="true"
                             xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 20 18">
@@ -17,7 +17,7 @@
                                 d="M4.109 17H1v-2a4 4 0 0 1 4-4h.87M10 4.5a3.5 3.5 0 1 1-7 0 3.5 3.5 0 0 1 7 0Zm7.95 2.55a2 2 0 0 1 0 2.829l-6.364 6.364-3.536.707.707-3.536 6.364-6.364a2 2 0 0 1 2.829 0Z" />
                         </svg>
                     </div>
-                </div>
+                </div> -->
 
                 <div class="flex justify-center p-5 -ml-40">
 
