--- a/src/app/component/experts/regform1/regform1.component.html
+++ b/src/app/component/experts/regform1/regform1.component.html
@@ -98,12 +98,12 @@
             </div>
             <div>
                 <label for="profileImage" class="mb-1 block text-sm font-medium text-gray-700">Profile Image</label>
-                <input type="file" id="profileImage" name="profileImage" formControlName="profileImage"
-                    accept="image/*" class="block w-full rounded-md" />
+                <input type="file" id="profileImage" name="profileImage" formControlName="profileImage" accept="image/*"
+                    class="block w-full rounded-md" />
                 <div *ngIf="regform1.get('profileImage')?.hasError('required') && form1Submitted" class="text-red-500">
                     Profile Image is required.
                 </div>
-             
+
             </div>
             <button type="submit" class=" rounded-lg border border-primary-500 bg-orange-500 px-5 py-2.5 text-center text-sm font-medium
                 text-white shadow-sm transition-all hover:border-primary-700 hover:bg-primary-700 focus:ring
