--- a/src/app/component/experts/videocall/videocall.component.html
+++ b/src/app/component/experts/videocall/videocall.component.html
@@ -11,8 +11,12 @@
 
 <button class="bg-orange-500 text-sm py-2 px-5 rounded-md mt-24 ml-10 font-medium hover:bg-orange-600 text-white"
     (click)="backToAppoinment()">back</button>
-
+<div *ngIf="loadingspinner==true">
+    <app-loading-spinner-expert></app-loading-spinner-expert>
+</div>
 <div class="ml-48 mt-16 flex space-x-32 ">
+
+
     <div>
         <div id="jitsi-iframe"></div>
 
@@ -28,6 +32,8 @@
 
         </div>
     </div>
+
+
     <div class="mt-20">
         <h1 class="font-normal text-lg mb-8 text-gray-500  ">Share the meet link here</h1>
         <div>
@@ -39,7 +45,8 @@
                         class="block w-full rounded-md border-gray-300 shadow-sm focus:border-primary-400 focus:ring focus:ring-primary-200 focus:ring-opacity-50 disabled:cursor-not-allowed disabled:bg-gray-50 disabled:text-gray-500"
                         placeholder="Paste link here" />
                     <ng-container *ngIf="!submitted">
-                        <div *ngIf="link.invalid && (link.dirty || link.touched)" class="text-red-600 text-sm">Meet Link
+                        <div *ngIf="link.invalid && (link.dirty || link.touched)" class="text-red-600 text-sm">Meet
+                            Link
                             is
                             required.</div>
                     </ng-container>
