--- a/src/app/component/users/community/community.component.html
+++ b/src/app/component/users/community/community.component.html
@@ -38,6 +38,14 @@
 
     </section>
     <section class="view thoughts mb-20">
+
+        <!-- <div *ngIf="isLoading==true">
+            <div class="-ml-[400px]">
+                <app-loading-spinner-user></app-loading-spinner-user>
+            </div>
+        </div> -->
+
+        <!-- <ng-container *ngIf="isLoading==false"> -->
         <div class="pl-32 pr-32 pt-1 ">
             <div *ngFor="let thoughts of  allThoughts" class="border-slate-00 border-[1px]  md:pl-9 flex md:p-4">
 
@@ -68,7 +76,8 @@
                         </div>
                         <div class="pb-5 -mt-6 pl-3 w-1/3" *ngIf="!thoughts.anonymous">
                             <p class="text-sm font-bold"> {{thoughts.userDetails.name}}</p>
-                            <p class="text-[10px] font-medium text-slate-500">{{thoughts.timestamp |relativeTime }} </p>
+                            <p class="text-[10px] font-medium text-slate-500">{{thoughts.timestamp | relativeTime }}
+                            </p>
                         </div>
                         <div class="pb-5 -mt-6" *ngIf="thoughts.anonymous">
                             <img class=" w-11 h-7  rounded-full ring-2 ring-gray-300 dark:ring-gray-500"
@@ -77,7 +86,8 @@
                         </div>
                         <div class="pb-5 -mt-6 pl-3 w-1/3" *ngIf="thoughts.anonymous">
                             <p class="text-sm font-bold">Anonymous</p>
-                            <p class="text-[10px] font-medium text-slate-500">{{thoughts.timestamp |relativeTime }} </p>
+                            <p class="text-[10px] font-medium text-slate-500">{{thoughts.timestamp | relativeTime }}
+                            </p>
                         </div>
                         <div class="flex justify-end w-full -mt-4">
                             <div class="">
@@ -100,7 +110,7 @@
                                 class=" absolute z-10 mt-2 w-48 rounded-lg border border-gray-100 bg-white text-left text-sm shadow-lg">
                                 <div class="p-1">
                                     <ng-container *ngIf="thoughts.user==thoughts.currentUser">
-                                        <a class="flex w-full items-center rounded-md px-3 py-2 text-gray-700 hover:bg-gray-100 space-x-1"
+                                        <a class="flex w-full items-center cursor-pointer rounded-md px-3 py-2 text-gray-700 hover:bg-gray-100 space-x-1"
                                             data-modal-toggle="modal1" (click)="editPost(thoughts._id) ">
                                             <p>
                                                 <svg class="w-3 h-3 text-orange-500 dark:text-white" aria-hidden="true"
@@ -114,7 +124,7 @@
                                             </p>
                                             <p>edit</p>
                                         </a>
-                                        <a class="flex w-full items-center rounded-md px-3 py-2 text-left text-sm text-gray-700 hover:bg-gray-100 space-x-1"
+                                        <a class="flex w-full cursor-pointer items-center rounded-md px-3 py-2 text-left text-sm text-gray-700 hover:bg-gray-100 space-x-1"
                                             (click)="deletePost(thoughts._id)">
                                             <p>
                                                 <svg class="w-3 h-3   text-orange-500 dark:text-white"
@@ -130,7 +140,7 @@
                                         </a>
                                     </ng-container>
                                     <ng-container *ngIf="thoughts.user !==thoughts.currentUser">
-                                        <a class="flex w-full items-center rounded-md px-3 py-2 text-left text-sm text-gray-700 hover:bg-gray-100"
+                                        <a class="flex cursor-pointer w-full items-center rounded-md px-3 py-2 text-left text-sm text-gray-700 hover:bg-gray-100"
                                             data-modal-toggle="authentication-modal2" (click)="flagPost(thoughts._id)">
                                             flag</a>
                                     </ng-container>
@@ -196,7 +206,7 @@
                                             <div
                                                 class="flex items-center px-3 py-2 rounded-lg bg-gray-50 dark:bg-gray-700">
 
-                                                <button type="button"
+                                                <button (click)="isEmojiPickerVisible = !isEmojiPickerVisible;"
                                                     class="p-2 text-gray-500 rounded-lg cursor-pointer hover:text-gray-900 hover:bg-gray-100 dark:text-gray-400 dark:hover:text-white dark:hover:bg-gray-600">
                                                     <svg class="w-5 h-5" aria-hidden="true"
                                                         xmlns="http://www.w3.org/2000/svg" fill="none"
@@ -207,6 +217,8 @@
                                                     </svg>
                                                     <span class="sr-only">Add emoji</span>
                                                 </button>
+                                                <br />
+
                                                 <textarea id="chat" rows="1" name="comment"
                                                     class="block mx-4 p-2.5 w-full text-sm text-gray-900 bg-white rounded-lg border border-gray-300 focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-800 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
                                                     placeholder="Add comment..." [(ngModel)]="commentText"
@@ -223,6 +235,9 @@
                                                     <span class="sr-only">Send message</span>
                                                 </button>
                                             </div>
+                                            <emoji-mart class="emoji-mart" *ngIf="isEmojiPickerVisible"
+                                                (emojiSelect)="addEmoji($event)"
+                                                title="Choose your emoji"></emoji-mart><br />
                                         </form>
                                     </div>
                                 </div>
@@ -316,6 +331,7 @@
 
             </div>
         </div>
+        <!-- </ng-container> -->
 
     </section>
     <app-footer></app-footer>
