--- a/src/app/component/users/profile/profile.component.html
+++ b/src/app/component/users/profile/profile.component.html
@@ -12,58 +12,64 @@
 
 
                 </div>
-                <div class="text-center w-[400px] flex-col justify-center align-middle  ml-[560px]">
-                    <p class="mt-8 text-lg font-medium ">{{userDetails.name}}</p>
-                    <div class="text-center " *ngIf="userDetails.bio; else nobio">
-                        <p class="mt-4 text-base font-normal ">
-                            {{userDetails.bio}}</p>
-                    </div>
-                    <ng-template #nobio>
-                        <p class="mt-4 text-base font-normal">Don't updated your profile yet❓Update Your Bio By Simply
-                            Clicking "<span class="text-orange-500 font-medium">Edit</span>" button below 😎 </p>
-                    </ng-template>
-                    <div class=" pt-10 ">
-                        <div class="flex gap-8 justify-center">
-                            <div class="flex gap-4" *ngIf="userDetails.location">
-                                <div>
-                                    <svg class=" w-6 h-6 text-orange-500 dark:text-white" aria-hidden="true"
-                                        xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 17 21">
-                                        <g stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"
-                                            stroke-width="2">
-                                            <path d="M8 12a3 3 0 1 0 0-6 3 3 0 0 0 0 6Z" />
-                                            <path
-                                                d="M13.8 12.938h-.01a7 7 0 1 0-11.465.144h-.016l.141.17c.1.128.2.252.3.372L8 20l5.13-6.248c.193-.209.373-.429.54-.66l.13-.154Z" />
-                                        </g>
-                                    </svg>
-                                </div>
-                                <div>
-                                    <p class="text-base">{{userDetails.location}}</p>
-                                </div>
-                            </div>
-                            <div class="flex gap-4">
-                                <div>
-                                    <svg class="w-6 h-6 text-orange-500 dark:text-white" aria-hidden="true"
-                                        xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 20 20">
-                                        <path stroke="currentColor" stroke-linejoin="round" stroke-width="2"
-                                            d="M10 6v4l3.276 3.276M19 10a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z" />
-                                    </svg>
-                                </div>
-                                <div>
-                                    <p class="text-base">{{userDetails.joined |dateToMonthYear}}</p>
-                                </div>
-                            </div>
-
-                        </div>
-                        <div class="pt-6">
-
-
-                            <button type="button" (click)="editProfiledata(userDetails._id)"
-                                class="text-orange-500 hover:text-white border border-red-700 hover:bg-orange-500 focus:ring-4 focus:outline-none focus:ring-red-300 font-medium rounded-lg text-sm px-6 py-1 text-center mr-2 mb-2 dark:border-red-500 dark:text-red-500 dark:hover:text-white dark:hover:bg-red-600 dark:focus:ring-red-900">Edit</button>
-                        </div>
-                    </div>
-
-
+                <div *ngIf="isLoading">
+                    <app-loading-spinner-user></app-loading-spinner-user>
                 </div>
+                <ng-container *ngIf="!isLoading">
+                    <div class="text-center w-[400px] flex-col justify-center align-middle  ml-[560px]">
+                        <p class="mt-8 text-lg font-medium ">{{userDetails.name}}</p>
+                        <div class="text-center " *ngIf="userDetails.bio; else nobio">
+                            <p class="mt-4 text-base font-normal ">
+                                {{userDetails.bio}}</p>
+                        </div>
+                        <ng-template #nobio>
+                            <p class="mt-4 text-base font-normal">Don't updated your profile yet❓Update Your Bio By
+                                Simply
+                                Clicking "<span class="text-orange-500 font-medium">Edit</span>" button below 😎 </p>
+                        </ng-template>
+                        <div class=" pt-10 ">
+                            <div class="flex gap-8 justify-center">
+                                <div class="flex gap-4" *ngIf="userDetails.location">
+                                    <div>
+                                        <svg class=" w-6 h-6 text-orange-500 dark:text-white" aria-hidden="true"
+                                            xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 17 21">
+                                            <g stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"
+                                                stroke-width="2">
+                                                <path d="M8 12a3 3 0 1 0 0-6 3 3 0 0 0 0 6Z" />
+                                                <path
+                                                    d="M13.8 12.938h-.01a7 7 0 1 0-11.465.144h-.016l.141.17c.1.128.2.252.3.372L8 20l5.13-6.248c.193-.209.373-.429.54-.66l.13-.154Z" />
+                                            </g>
+                                        </svg>
+                                    </div>
+                                    <div>
+                                        <p class="text-base">{{userDetails.location}}</p>
+                                    </div>
+                                </div>
+                                <div class="flex gap-4">
+                                    <div>
+                                        <svg class="w-6 h-6 text-orange-500 dark:text-white" aria-hidden="true"
+                                            xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 20 20">
+                                            <path stroke="currentColor" stroke-linejoin="round" stroke-width="2"
+                                                d="M10 6v4l3.276 3.276M19 10a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z" />
+                                        </svg>
+                                    </div>
+                                    <div>
+                                        <p class="text-base">{{userDetails.joined |dateToMonthYear}}</p>
+                                    </div>
+                                </div>
+
+                            </div>
+                            <div class="pt-6">
+
+
+                                <button type="button" (click)="editProfiledata(userDetails._id)"
+                                    class="text-orange-500 hover:text-white border border-red-700 hover:bg-orange-500 focus:ring-4 focus:outline-none focus:ring-red-300 font-medium rounded-lg text-sm px-6 py-1 text-center mr-2 mb-2 dark:border-red-500 dark:text-red-500 dark:hover:text-white dark:hover:bg-red-600 dark:focus:ring-red-900">Edit</button>
+                            </div>
+                        </div>
+
+
+                    </div>
+                </ng-container>
 
             </div>
 
@@ -317,15 +323,16 @@
                                         <div
                                             class="relative rounded-full w-32 h-32 bg-gray-200 border-2 border-gray-300 hover:border-orange-500">
                                             <input type="file" id="profileImage" name="profileImage"
-                                                (change)="onFileSelected($event)"
+                                                (change)="onFileSelected($event)" accept="image/*"
                                                 class="absolute inset-0 w-full h-full opacity-0 cursor-pointer">
-                                            <img src="../../../../assets/image/asim.jpg"
-                                                *ngIf="!user.profileImage,else uploadedImg" alt="Current Profile Image"
+                                            <img alt="..."
+                                                src="https://i.pinimg.com/474x/85/25/83/852583511c3109d7a4efa0c3a233be1e.jpg"
+                                                *ngIf="!user.profileImage && !imageUrl" alt="Current Profile Image"
                                                 class="object-cover w-full h-full rounded-full">
-                                            <ng-template #uploadedImg>
-                                                <img src="../../../../assets/image/asim.jpg" alt="Current Profile Image"
+                                            <ng-container *ngIf="imageUrl">
+                                                <img [src]="imageUrl" alt="Current Profile Image"
                                                     class="object-cover w-full h-full rounded-full">
-                                            </ng-template>
+                                            </ng-container>
                                             <div
                                                 class="absolute inset-0 flex items-center justify-center text-gray-700 hover:text-orange-500">
                                                 <svg xmlns="http://www.w3.org/2000/svg" class="w-8 h-8" fill="none"
