--- a/src/app/component/users/view-expert/view-expert.component.html
+++ b/src/app/component/users/view-expert/view-expert.component.html
@@ -49,7 +49,8 @@
                                 <a
                                     class="flex flex-col  items-center bg-white  p-10  pr-20  rounded-lg  md:flex-row md:max-w-xl  dark:border-gray-700 dark:bg-gray-800 dark:hover:bg-gray-700">
                                     <img class="object-cover w-full rounded-t-lg h-96 md:h-auto md:w-48 md:rounded-none md:rounded-l-lg"
-                                        src="../../../../assets/image/asim.jpg" alt="">
+                                        [src]="'https://avatars2.githubusercontent.com/u/'+hexToDecimal(currentExpertId)  + '?s=360'"
+                                        alt="">
 
                                     <div class="flex flex-col justify-between  leading-normal  ">
                                         <h5
