--- a/src/app/component/users/chat-user/chat-user.component.html
+++ b/src/app/component/users/chat-user/chat-user.component.html
@@ -50,13 +50,13 @@
                 <ng-container *ngIf="!isLoading">
                     <ng-container *ngIf="activeChats">
                         <div (click)="showChats(item.expert._id)" *ngFor="let item of ActiveChats"
-                            class=" ml-8 mr-8 mb-0   pt-5 pb-5 hover:bg-slate-100"
+                            class=" ml-8 mr-8 mb-0 border border-dashed  pt-5 pb-5 hover:bg-slate-100"
                             [ngClass]="{'selected': selectedExpert === item.expert._id}">
 
 
                             <div class="flex items-center gap-4 pl-4 ">
                                 <img alt="Women"
-                                    src="https://images.unsplash.com/photo-1611432579699-484f7990b127?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1770&q=80"
+                                    [src]="'https://avatars2.githubusercontent.com/u/'+hexToDecimal(item.expert._id)  + '?s=360'"
                                     class="h-12 w-12 rounded-lg object-cover" />
 
                                 <div>
@@ -81,7 +81,7 @@
 
                                         <div class="flex items-center gap-4 pl-4 ">
                                             <img alt="Women"
-                                                src="https://images.unsplash.com/photo-1611432579699-484f7990b127?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1770&q=80"
+                                                [src]="'https://avatars2.githubusercontent.com/u/'+hexToDecimal(item.expert._id)  + '?s=360'"
                                                 class="h-12 w-12 rounded-lg object-cover" />
 
                                             <div>
@@ -115,7 +115,7 @@
                                 <div class="flex items-center gap-4 pl-4 " *ngFor="let item of  ActiveChats">
                                     <ng-container *ngIf="item.expert._id=== selectedExpert">
                                         <img alt="Women"
-                                            src="https://images.unsplash.com/photo-1611432579699-484f7990b127?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1770&q=80"
+                                            [src]="'https://avatars2.githubusercontent.com/u/'+hexToDecimal(item.expert._id)  + '?s=360'"
                                             class="h-12 w-12 rounded-lg object-cover" />
 
                                         <div>
@@ -133,7 +133,7 @@
                                 <div class="flex items-center gap-4 pl-4 " *ngFor="let item of   previousChatdocs">
                                     <ng-container *ngIf="item.expert._id=== selectedExpert">
                                         <img alt="Women"
-                                            src="https://images.unsplash.com/photo-1611432579699-484f7990b127?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1770&q=80"
+                                            [src]="'https://avatars2.githubusercontent.com/u/'+hexToDecimal(item.expert._id)  + '?s=360'"
                                             class="h-12 w-12 rounded-lg object-cover" />
 
                                         <div>
