--- a/src/app/component/users/community/community.component.html
+++ b/src/app/component/users/community/community.component.html
@@ -70,7 +70,7 @@
                     </div>
                     <div class="flex">
                         <div></div>
-                        <div class="pb-5 -mt-6 mb-16" *ngIf="!thoughts.anonymous">
+                        <div class="pb-5 -mt-6 " *ngIf="!thoughts.anonymous">
                             <img class=" w-14 h-10 p-1 rounded-full ring-2 brightness-150 contrast-75 ring-violet-500 dark:ring-violet-500"
                                 [src]="'https://avatars2.githubusercontent.com/u/' +hexToDecimal(thoughts.user)  + '?s=360'"
                                 alt="Bordered avatar">
