--- a/src/app/component/users/profile/profile.component.html
+++ b/src/app/component/users/profile/profile.component.html
@@ -121,8 +121,8 @@
                         <div class="flex">
                             <div></div>
                             <div class="pb-5 -mt-6">
-                                <img class=" w-8 h-8 p-1 rounded-full ring-2 ring-gray-300 dark:ring-gray-500"
-                                    src="/docs/images/people/profile-picture-5.jpg" alt="Bordered avatar">
+                                <img class=" w-14 h-10 p-1 rounded-full ring-2 brightness-150 contrast-75 ring-violet-500 dark:ring-violet-500"
+                                    [src]="'https://avatars2.githubusercontent.com/u/' +hexToDecimal(thought.user)  + '?s=360'">
 
                             </div>
                             <div class="pb-5 -mt-6 pl-3 w-1/3">
